fix spacing between icon and content

--- a/packages/styles/framework/src/elements/_list.scss
+++ b/packages/styles/framework/src/elements/_list.scss
@@ -48,6 +48,9 @@ ol.list {
       justify-content: flex-start;
       align-items: flex-start;
     }
+    .list-item-content {
+      flex: 1; /* Pour que le contenu prenne tout l'espace restant */
+    }
   }
 
   &.has-divider {
